[gd_scene load_steps=60 format=2]

[ext_resource path="res://Source/Background/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Graphics/Textures/old_paper.png" type="Texture" id=2]
[ext_resource path="res://Source/Gameplay/Game/Game.gd" type="Script" id=3]
[ext_resource path="res://Source/Gameplay/PlayersQueue/PlayersQueue.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Graphics/Icons/exitLeft.png" type="Texture" id=5]
[ext_resource path="res://Source/Button/Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://Source/Gameplay/Map/Map.tscn" type="PackedScene" id=7]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Scandinavia.tscn" type="PackedScene" id=8]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Greenland.tscn" type="PackedScene" id=9]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/EasternAustralia.tscn" type="PackedScene" id=10]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/EastAfrica.tscn" type="PackedScene" id=11]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Yakutsk.tscn" type="PackedScene" id=12]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Iceland.tscn" type="PackedScene" id=13]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/SouthAfrica.tscn" type="PackedScene" id=14]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/MiddleEast.tscn" type="PackedScene" id=15]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Peru.tscn" type="PackedScene" id=16]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Ural.tscn" type="PackedScene" id=17]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Egypt.tscn" type="PackedScene" id=18]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Ontario.tscn" type="PackedScene" id=19]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/WesternAustralia.tscn" type="PackedScene" id=20]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/India.tscn" type="PackedScene" id=21]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Quebec.tscn" type="PackedScene" id=22]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Siam.tscn" type="PackedScene" id=23]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Kamchatka.tscn" type="PackedScene" id=24]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Venezuela.tscn" type="PackedScene" id=25]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Congo.tscn" type="PackedScene" id=26]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Mongolia.tscn" type="PackedScene" id=27]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/NorthAfrica.tscn" type="PackedScene" id=28]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/NorthernEurope.tscn" type="PackedScene" id=29]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Siberia.tscn" type="PackedScene" id=30]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Indonesia.tscn" type="PackedScene" id=31]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/NewGuinea.tscn" type="PackedScene" id=32]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/WesternUnitedStates.tscn" type="PackedScene" id=33]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/SouthernEurope.tscn" type="PackedScene" id=34]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/NorthwestTerritory.tscn" type="PackedScene" id=35]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/EasternUnitedStates.tscn" type="PackedScene" id=36]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Irkutsk.tscn" type="PackedScene" id=37]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Madagascar.tscn" type="PackedScene" id=38]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/WesternEurope.tscn" type="PackedScene" id=39]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Japan.tscn" type="PackedScene" id=40]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/GreatBritain.tscn" type="PackedScene" id=41]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Ukraine.tscn" type="PackedScene" id=42]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Alaska.tscn" type="PackedScene" id=43]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Alberta.tscn" type="PackedScene" id=44]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Afghanistan.tscn" type="PackedScene" id=45]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Argentina.tscn" type="PackedScene" id=46]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/Brazil.tscn" type="PackedScene" id=47]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/CentralAmerica.tscn" type="PackedScene" id=48]
[ext_resource path="res://Source/Gameplay/Map/Country/Countries/China.tscn" type="PackedScene" id=49]
[ext_resource path="res://Assets/Fonts/no_virus/No Virus.ttf" type="DynamicFontData" id=50]
[ext_resource path="res://Source/Gameplay/HUD/QuitGameMenu.tscn" type="PackedScene" id=51]
[ext_resource path="res://Assets/Audio/glitch_001.ogg" type="AudioStream" id=52]
[ext_resource path="res://Assets/Audio/glitch_002.ogg" type="AudioStream" id=53]
[ext_resource path="res://Assets/Graphics/Icons/gear.png" type="Texture" id=54]
[ext_resource path="res://Source/Gameplay/HUD/OptionsMenu.tscn" type="PackedScene" id=55]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 50 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 800, 500 )
modulate_color = Color( 0.517647, 0.517647, 0.517647, 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 50 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 2 )
LineEdit/styles/normal = SubResource( 2 )
LineEdit/styles/read_only = SubResource( 2 )

[node name="Game" type="Node2D" groups=["game"]]
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="ColorRect" parent="Background" index="0"]
color = Color( 0.0235294, 0.635294, 0.847059, 1 )

[node name="TextureRect" parent="Background" index="1"]
visible = false
mouse_filter = 2

[node name="HUD" type="CanvasLayer" parent="."]

[node name="QuitBorder" type="TextureRect" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -104.0
margin_right = 128.0
margin_bottom = -20.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="HUD/QuitBorder"]
modulate = Color( 0.196078, 0.196078, 0.196078, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Focused" type="AudioStreamPlayer" parent="HUD/QuitBorder/QuitButton"]
stream = ExtResource( 52 )

[node name="Pressed" type="AudioStreamPlayer" parent="HUD/QuitBorder/QuitButton"]
stream = ExtResource( 53 )

[node name="OptionsBorder" type="TextureRect" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_top = -104.0
margin_right = 256.0
margin_bottom = -20.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="HUD/OptionsBorder"]
modulate = Color( 0.196078, 0.196078, 0.196078, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 54 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Focused" type="AudioStreamPlayer" parent="HUD/OptionsBorder/OptionsButton"]
stream = ExtResource( 52 )

[node name="Pressed" type="AudioStreamPlayer" parent="HUD/OptionsBorder/OptionsButton"]
stream = ExtResource( 53 )

[node name="AutoPlaceBorder" type="TextureRect" parent="HUD"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -234.0
margin_top = -104.0
margin_right = -14.0
margin_bottom = -20.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoPlace" parent="HUD/AutoPlaceBorder" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -30.0
margin_right = 90.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Auto Place"
flat = true

[node name="Overlay" type="ColorRect" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGameMenu" parent="HUD" instance=ExtResource( 51 )]
visible = false

[node name="OptionsOverlay" type="ColorRect" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="HUD/OptionsOverlay" instance=ExtResource( 55 )]
theme = SubResource( 4 )

[node name="PlayersQueue" parent="." instance=ExtResource( 4 )]

[node name="MapLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Map" parent="MapLayer" instance=ExtResource( 7 )]
visible = false
mouse_filter = 2

[node name="Countries" type="Node2D" parent="."]

[node name="Afghanistan" parent="Countries" instance=ExtResource( 45 )]
position = Vector2( 796.85, 196.555 )

[node name="Alaska" parent="Countries" instance=ExtResource( 43 )]
position = Vector2( 119.845, 81.2 )

[node name="Alberta" parent="Countries" instance=ExtResource( 44 )]
position = Vector2( 205.582, 114.876 )

[node name="Argentina" parent="Countries" instance=ExtResource( 46 )]
position = Vector2( 237.881, 531.581 )

[node name="Brazil" parent="Countries" instance=ExtResource( 47 )]
position = Vector2( 314.27, 413.574 )

[node name="CentralAmerica" parent="Countries" instance=ExtResource( 48 )]
position = Vector2( 185.081, 263.7 )

[node name="China" parent="Countries" instance=ExtResource( 49 )]
position = Vector2( 942.512, 234.12 )

[node name="Congo" parent="Countries" instance=ExtResource( 26 )]
position = Vector2( 621.001, 455.09 )

[node name="EastAfrica" parent="Countries" instance=ExtResource( 11 )]
position = Vector2( 698.408, 428.921 )

[node name="EasternAustralia" parent="Countries" instance=ExtResource( 10 )]
position = Vector2( 1143.32, 552.717 )

[node name="EasternUnitedStates" parent="Countries" instance=ExtResource( 36 )]
position = Vector2( 280.781, 196.556 )

[node name="Egypt" parent="Countries" instance=ExtResource( 18 )]
position = Vector2( 636.422, 330.472 )

[node name="GreatBritain" parent="Countries" instance=ExtResource( 41 )]
position = Vector2( 476.703, 155.476 )

[node name="Greenland" parent="Countries" instance=ExtResource( 9 )]
position = Vector2( 430.503, 56.55 )

[node name="Iceland" parent="Countries" instance=ExtResource( 13 )]
position = Vector2( 513.003, 92.22 )

[node name="India" parent="Countries" instance=ExtResource( 21 )]
position = Vector2( 868.227, 304.725 )

[node name="Indonesia" parent="Countries" instance=ExtResource( 31 )]
position = Vector2( 972.212, 449.29 )

[node name="Irkutsk" parent="Countries" instance=ExtResource( 37 )]
position = Vector2( 955.698, 121.8 )

[node name="Japan" parent="Countries" instance=ExtResource( 40 )]
position = Vector2( 1093.82, 184.15 )

[node name="Kamchatka" parent="Countries" instance=ExtResource( 24 )]
position = Vector2( 1040.85, 102.95 )

[node name="Madagascar" parent="Countries" instance=ExtResource( 38 )]
position = Vector2( 769.688, 549.817 )

[node name="MiddleEast" parent="Countries" instance=ExtResource( 15 )]
position = Vector2( 723.488, 307.2 )

[node name="Mongolia" parent="Countries" instance=ExtResource( 27 )]
position = Vector2( 978.812, 184.15 )

[node name="NewGuinea" parent="Countries" instance=ExtResource( 32 )]
position = Vector2( 1143.32, 414.489 )

[node name="NorthAfrica" parent="Countries" instance=ExtResource( 28 )]
position = Vector2( 541.383, 363.242 )

[node name="NorthernEurope" parent="Countries" instance=ExtResource( 29 )]
position = Vector2( 593.523, 171.68 )

[node name="NorthwestTerritory" parent="Countries" instance=ExtResource( 35 )]
position = Vector2( 244.811, 56.55 )

[node name="Ontario" parent="Countries" instance=ExtResource( 19 )]
position = Vector2( 280.781, 128.18 )

[node name="Peru" parent="Countries" instance=ExtResource( 16 )]
position = Vector2( 237.63, 402.89 )

[node name="Quebec" parent="Countries" instance=ExtResource( 22 )]
position = Vector2( 358.361, 125.57 )

[node name="Scandinavia" parent="Countries" instance=ExtResource( 8 )]
position = Vector2( 611.102, 97.15 )

[node name="Siam" parent="Countries" instance=ExtResource( 23 )]
position = Vector2( 972.212, 337.223 )

[node name="Siberia" parent="Countries" instance=ExtResource( 30 )]
position = Vector2( 864.927, 95.12 )

[node name="SouthAfrica" parent="Countries" instance=ExtResource( 14 )]
position = Vector2( 643.023, 555.617 )

[node name="SouthernEurope" parent="Countries" instance=ExtResource( 34 )]
position = Vector2( 603.841, 237.156 )

[node name="Ukraine" parent="Countries" instance=ExtResource( 42 )]
position = Vector2( 711.608, 151.09 )

[node name="Ural" parent="Countries" instance=ExtResource( 17 )]
position = Vector2( 822.027, 107.59 )

[node name="Venezuela" parent="Countries" instance=ExtResource( 25 )]
position = Vector2( 268.07, 325.542 )

[node name="WesternAustralia" parent="Countries" instance=ExtResource( 20 )]
position = Vector2( 1069.73, 558.517 )

[node name="WesternEurope" parent="Countries" instance=ExtResource( 39 )]
position = Vector2( 507.723, 240.055 )

[node name="WesternUnitedStates" parent="Countries" instance=ExtResource( 33 )]
position = Vector2( 195.311, 187.05 )

[node name="Yakutsk" parent="Countries" instance=ExtResource( 12 )]
position = Vector2( 958.998, 59.45 )

[connection signal="pressed" from="HUD/QuitBorder/QuitButton" to="." method="quit"]
[connection signal="pressed" from="HUD/OptionsBorder/OptionsButton" to="." method="options"]
[connection signal="pressed" from="HUD/AutoPlaceBorder/AutoPlace" to="." method="auto_place_turned_on"]
[connection signal="options_saved" from="HUD/OptionsOverlay/OptionsMenu" to="." method="options_saved"]
[connection signal="active_player_changed" from="PlayersQueue" to="." method="active_player_changed"]

[editable path="Background"]
